--- a/css-lesson-01.html
+++ b/css-lesson-01.html
@@ -1,16 +1,19 @@
-<!DOCTYPE html
+<!DOCTYPE html>
 
 <html>
 
  <head>
  	<title>HTML Lessons</title>
  	<meta name="keywords" content="lesson, HTML, Binghamton University">
- 	<meto name="description" content="this is a basic intro to HTML coding.">
+ 	<meta name="description" content="this is a basic intro to HTML coding.">
+  <link rel="stylesheet" type="text/css" href="css/css-lesson-01.css">
  </head>
 
  <body>
 	
 	<h1>Intro to HTML lesson</h1>
+  <h1 id="main-headline">Intro to HTML lesson</h1>
+  <h1 class="main-headline">Intro to HTML lesson</h1>
 	<h2>My very nice subtitle</h2>
 	<h3>Aother Headline Right Here</h3>
 	<h4>This is a even smaller header</h4>
