css/html lesson 02

--- a/html-lesson.html
+++ b/html-lesson.html
@@ -6,7 +6,7 @@
  	  <title>CSS Lessons 01</title>
  	  <meta name="keywords" content="lesson, HTML, Binghamton University">
  	  <meto name="description" content="this is a basic intro to HTML coding.">
- 	  <link rel="stylesheet" type="text/css" hrf="css/style.css">
+ 	  <link rel="stylesheet" type="text/css" hrf="css/html-lesson-01.css">
 
       <style type="text/css">
 
