--- a/css-lesson-01.html
+++ b/css-lesson-01.html
@@ -25,7 +25,7 @@
      <p>
 
      <p>
-     	<a href="https://unsplash.com/s/photos/blue-whale" target="_blank"   ><img src="images/whale.jpg" title="blue whale" alt="whale" /><a>
+     	<a href="https://unsplash.com/s/photos/blue-whale" target="_blank"   ><img src="image/whale.jpg" title="blue whale" alt="whale" /><a>
      </p>
 
      <p>
