--- a/css-lesson-02.html
+++ b/css-lesson-02.html
@@ -23,7 +23,7 @@
 
             <p>By Virginia Morell | Jun. 2, 2020 , 7:01 PM</p>
 
-            <img src="images/urban-fox.jpg" />
+            <img src="image/urban-fox.jpg" />
            
             <p><span>In a ongoing experiment started in 1960,</span> scientists turned foxes into tame, doglike canines by bredding only the least aggressive ones generation after generation. The creature developed stubby snouts, floppy ears, and even begun to bark.</p>
 
