--- a/css-lesson-03.html
+++ b/css-lesson-03.html
@@ -86,18 +86,18 @@
           </p>
 
           <div class="new font size">
-            <div class=".rem-size-box {
+            <div class=".rem-size-box">
+            </div>
           </div>
+
+           <div class=".rem-size-box">
            </div>
 
-           <div class=".rem-size-box {
-          </div>
-
-          <p>
+           <p>
             vw and vh units.
-          </p>
+           </p>
 
-          <div class="vw-vh-demo">
+           <div class="vw-vh-demo">
             VH and VW demo
           </div>
 
