css lesson 4 for Friday

--- a/css-lesson-04.html
+++ b/css-lesson-04.html
@@ -16,31 +16,26 @@
 
     <div id="wrapper">
 
-      <!--
+    example 1
       <div class="grid">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
-        <div class="item item5">5</div>
-        <div class="item">6</div>
-        <div class="item">7</div>
-        <div class="item">8</div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        
+
       </div>
-    -->
+    example 2
 
     <div id="grid-complex">
       <div class="block"></div> 
+      <div class="block"></div>
       <div class="block tall"></div>
       <div class="block"></div>
       <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block wide"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>
-      <div class="block"></div>    
+        
     </div>
  
     </div>
