--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
-<!-- HTML -->
+<!DOCTYPE html>
+<html>
+<head>
+  <meta name="keywords" content="design, html, css, fronted, developed, designer">
+  <meta name="description" content="Personal Website of Xian Wu">
+  <title>Xian Wu</title>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorgin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="css/grid.css"
+  <link rel="stylesheet" type="text/css" href="css/grid.css"
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;700&family=Roboto:wght@900&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+  <div id="wrapper">
+
+  	<div id="masthead" class="grid"
+
+  	   <div id="logo" class="width-9-12-m width-5-12">
+  	  
+
+
+
+  	</div>
+
+  	<div id="nav-button" class="width-3-12-m width-12-12">
+      <div id="nav-button-holder">
+      	<button class="hamburger hamburger--squeeze" type="button">
+      		<span class="hamburger-box">
+      			<span class="hamburger-inner"></span>
+      		</span>
+      	</button>
+      </div>
+     </div>
+    
+
+  	<div id="nav" class="width-12-12-m  width-7-12">
+  		<ul>
+  		  <li><a href="#">Home</a></li>
+  		  <li><a href="#">Portfolio</a></li>
+  		  <li><a href="#">Blog</a></li>
+  		  <li><a href="#">Contact</a></li>
+  		</ul>
+  	   </div>
+
+    </div>
+
+    <div id="main" class="grid">
+    </div>
+
+    <div id="footer" class="grid">
+    </div>
+
+    </div>
+
+  </body>
+  </html>
+
+
+
+
+
+
+
+
+
+
+
+</body>
+</html><!-- HTML -->
