--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta name="keywords" content="design, html, css, fronted, developed, designer">
-  <meta name="description" content="Personal Website of Xian Wu">
-  <title>Xian Wu</title>
+  <meta name="description" content="Personal Website of XianWu">
+  <title>XianWu</title>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorgin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="css/grid.css"
-  <link rel="stylesheet" type="text/css" href="css/grid.css"
+  <link rel="stylesheet" type="text/css" href="css/grid.css">
+  <link rel="stylesheet" type="text/css" href="css/grid.css">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;700&family=Roboto:wght@900&display=swap" rel="stylesheet">
 </head>
 
@@ -15,14 +15,14 @@
 
   <div id="wrapper">
 
-  	<div id="masthead" class="grid"
+  	<div id="masthead" class="grid">
 
   	   <div id="logo" class="width-9-12-m width-5-12">
   	  
 
 
 
-  	</div>
+  	</div> 
 
   	<div id="nav-button" class="width-3-12-m width-12-12">
       <div id="nav-button-holder">
@@ -56,16 +56,3 @@
 
   </body>
   </html>
-
-
-
-
-
-
-
-
-
-
-
-</body>
-</html><!-- HTML -->
