fix some grammar problem

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <div id="intro" class="width-12-12-m width-12-12">
         <div id="intro-holder">
-          <h1>I fall in love for U, not for how U look but for who U R.</h1>
+          <h1>I fall in love with U, not for how U look just for who U R.</h1>
         </div>
       </div>
 
