--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
       <div id="nav" class="width-12-12-m width-7-12">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
        </ul> 
       </div>
 
@@ -56,12 +56,12 @@
 
       <div id="work" class="width-12-12-m width-12-12">
 
-        <h3>Selected Work</h3>
+        <h3><a title="Portfolio" href="portfolio.html">Selected Work</a></h3>
 
         <div id="work-holder" class="grid">
 
           <div class="width-12-12-m width-6-12 work-item">
-            <a class="inner" href=" " title="WXWX">
+            <a class="inner" href="portfolio-single.html" title="WXWX">
               <div class="work-inside">
                 <h2>WXWX</h2>
                 <p>WQ shi wo die</p>
@@ -71,7 +71,7 @@
           </div>
 
           <div class="width-12-12-m width-6-12 work-item">
-            <a class="inner" href="" title="Every Single Person">
+            <a class="inner" href="portfolio-single.html" title="WQWQWQ">
               <div class="work-inside">
                 <h2>WQWQWQ</h2>
                 <p>wo shi ni die</p>
@@ -86,7 +86,7 @@
 
       <div id="writings" class="width-12-12-m width-12-12">
 
-        <h3>Writing</h3>
+        <h3><a title="Blog" href="Blog.html">Writing</a></h3>
 
         <div id="writings-holder" class="grid">
 
