--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8"/>
   <meta name="keywords" content="design, html, css, frontend, developer, designer">
   <meta name="description" content="Personal Website of Xian Wu">
   <title>Xian Wu</title>
@@ -49,71 +48,30 @@
 
     <div id="main" class="grid">
 
-      <div id="intro" class="width-12-12-m width-12-12">
-        <div id="intro-holder">
-          <h1>I like WQ.</h1>
+      <div id="portfolio" class="width-12-12-m width-12-12">
 
-        </div>
-      </div>
+        <h3><a href="portfolio.html">Portfolio</a></h3>
 
-      <div id="work" class="width-12-12-m width-12-12">
+        <div id="portfolio-holder" class="grid">
 
-        <h3>Selected Work</h3>
-
-        <div id="work-holder" class="grid">
-
-          <div class="width-12-12-m width-6-12 work-item">
-            <a class="inner" href="" title="Hell Yes">
+          <div class="width-12-12-m width-12-12 work-item">
+            <a class="inner" href="portfolio-single.html" title="WXWX">
               <div class="work-inside">
-                <h2>Hell Yes</h2>
-                <p>Live Twitter. The good, the bad, the ugly. And the bots. Everything with a "Hell Yes!"</p>
+                <h2>WXWX</h2>
+                <p>WQ shi wo die</p>
               </div>
-              <img title="Every Single Person" src="images/yes.png" />
+              <img title="wx" src="image/wx-big.jpg" />
             </a>
           </div>
 
-          <div class="width-12-12-m width-6-12 work-item">
-            <a class="inner" href="" title="Every Single Person">
+          <div class="width-12-12-m width-12-12 work-item">
+            <a class="inner" href="portfolio-single.html" title="WQWQWQ">
               <div class="work-inside">
-                <h2>Every Single Person</h2>
-                <p>Every single reported COVID-19 case by country.</p>
+                <h2>WQWQWQ</h2>
+                <p>wo shi ni die</p>
               </div>
-              <img title="Every Single Person" src="images/everysinglecase.png" />
+              <img title="wq" src="image/wq-big.jpg" />
             </a>
-          </div>
-
-        <div>
-
-      </div>
-
-      <div id="writings" class="width-12-12-m width-12-12">
-
-        <h3>Writing</h3>
-
-        <div id="writings-holder" class="grid">
-
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Fusce Varius Risus</a></h2>
-            <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius risus ut efficitur ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
-          </div>
-
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Cras Hendrerit Eleifend</a></h2>
-            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.<p>
-          </div>
-
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Cras Hendrerit Eleifend</a></h2>
-            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.<p>
-          </div>
-
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Fusce Varius Risus</a></h2>
-            <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius <a href="">risus ut efficitur</a> ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
           </div>
 
         <div>
@@ -121,11 +79,10 @@
       </div>
 
     </div>
-
+    
     <div id="footer" class="grid">
-      <div class="width-12-12-m width-12-12">
-        <p>Copyright ©2020 · Kevin J Lahoda</p>
-      </div>
+      <div id="writings" class="width-12-12-m width-12-12">
+        <p>Copy for Free @2020 ... Xian Wu</p>
     </div>
 
   </div>
