--- a/contact.html
+++ b/contact.html
@@ -38,9 +38,9 @@
       <div id="nav" class="width-12-12-m width-7-12">
         <ul>
           <li><a href="about.html">About</a></li>
-          <li><a class="active" href="portfolio.html">Portfolio</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a class="active" href="contact.html">Contact</a></li>
        </ul> 
       </div>
 
@@ -48,33 +48,18 @@
 
     <div id="main" class="grid">
 
-      <div id="portfolio" class="width-12-12-m width-12-12">
+      <div id="writings" class="width-12-12-m width-12-12">
 
-        <h3><a href="portfolio.html">Portfolio</a></h3>
+        <div id="writings-holder" class="grid">
 
-        <div id="portfolio-holder" class="grid">
+          <div class="width-12-12-m width-9-12 writing-item">
+            <h2><a href="">Contact </a></h2> 
 
-          <div class="width-12-12-m width-12-12 work-item">
-            <a class="inner" href="portfolio-single.html" title="WXWX">
-              <div class="work-inside">
-                <h2>WXWX</h2>
-                <p>WQ shi wo die</p>
-              </div>
-              <img title="wx" src="image/wx-big.jpg" />
-            </a>
+            <p>Wechat:6077680878</p>
+            <p>ins: "wxisgood"</p>
           </div>
 
-          <div class="width-12-12-m width-12-12 work-item">
-            <a class="inner" href="portfolio-single.html" title="WQWQWQ">
-              <div class="work-inside">
-                <h2>WQWQWQ</h2>
-                <p>wo shi ni die</p>
-              </div>
-              <img title="wq" src="image/wq-big.jpg" />
-            </a>
-          </div>
-
-        <div>
+        </div>
 
       </div>
 
