--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
 
       <div id="nav" class="width-12-12-m width-7-12">
         <ul>
-          <li><a href="about.html">About</a></li>
-          <li><a class="active" href="portfolio.html">Portfolio</a></li>
+          <li><a class="active"  href="about.html">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
        </ul> 
@@ -48,33 +48,22 @@
 
     <div id="main" class="grid">
 
-      <div id="portfolio" class="width-12-12-m width-12-12">
+      <div id="writings" class="width-12-12-m width-12-12">
 
-        <h3><a href="portfolio.html">Portfolio</a></h3>
+        <div id="writings-holder" class="grid">
 
-        <div id="portfolio-holder" class="grid">
+          <div class="width-12-12-m width-9-12 writing-item">
+            <h2><a href="">About Me</a></h2> 
+            
+            <p><a href="files/resume.pdf" title="resume">What I look like (.pdf)</a></p>
 
-          <div class="width-12-12-m width-12-12 work-item">
-            <a class="inner" href="portfolio-single.html" title="WXWX">
-              <div class="work-inside">
-                <h2>WXWX</h2>
-                <p>WQ shi wo die</p>
-              </div>
-              <img title="wx" src="image/wx-big.jpg" />
-            </a>
+            <p>Hi, My name is Wu Xian 21 years old. I'm a student at Binghamton University. In the picture, I'm holding one of my pet guinea pigs, her name is Yue Yunpeng, or Fluffy. Who's a famous comedian in China. My hobbies are playing basketball and reading interesting books. I'm 5'10 and 160lb.</p>
+
+            <p>I made this webpage for my girlfriend. Next week is her birthday, let's all wish her a happy birthday!!!!</p>
+
           </div>
 
-          <div class="width-12-12-m width-12-12 work-item">
-            <a class="inner" href="portfolio-single.html" title="WQWQWQ">
-              <div class="work-inside">
-                <h2>WQWQWQ</h2>
-                <p>wo shi ni die</p>
-              </div>
-              <img title="wq" src="image/wq-big.jpg" />
-            </a>
-          </div>
-
-        <div>
+        </div>
 
       </div>
 
