--- a/blog-single.html
+++ b/blog-single.html
@@ -38,8 +38,8 @@
       <div id="nav" class="width-12-12-m width-7-12">
         <ul>
           <li><a href="about.html">About</a></li>
-          <li><a class="active" href="portfolio.html">Portfolio</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a class="active" href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
        </ul> 
       </div>
@@ -48,33 +48,61 @@
 
     <div id="main" class="grid">
 
-      <div id="portfolio" class="width-12-12-m width-12-12">
+      <div id="writings" class="width-12-12-m width-12-12">
 
-        <h3><a href="portfolio.html">Portfolio</a></h3>
+        <h3><a title="Blog" href="Blog.html">Writing</a></h3>
 
-        <div id="portfolio-holder" class="grid">
+        <div id="writings-holder" class="grid">
 
-          <div class="width-12-12-m width-12-12 work-item">
-            <a class="inner" href="portfolio-single.html" title="WXWX">
-              <div class="work-inside">
-                <h2>WXWX</h2>
-                <p>WQ shi wo die</p>
-              </div>
-              <img title="wx" src="image/wx-big.jpg" />
-            </a>
+          <div class="width-12-12-m width-9-12 writing-item">
+            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
+            <h2><a href="">I Will Take Care Of You</a></h2>
+
+            <p><img title="wq" src="image/wq.jpg" /></p> 
+
+            <p>Let me take care of your broken heart 
+              and show you how to fly.
+              Let me hold you gently by the hand
+              and kiss your tears goodbye.</p>
+
+            <p>Let me lead you to tomorrow's light
+              and out of needless rain,
+              'cause all I want right now
+              is to see you smile again.</p>
+
+            <p>Let me sing you all the songs I wrote
+              'til you sleep in my embrace,
+              and I'll keep you safe and warm until
+              the sunlight strokes your face.</p>
+
+            <p>Let me bring you up the mountain's peak,
+              and I'll let you touch the skies
+              to remind you of the strength I see
+              when I look into your eyes.</p>
+
+            <p>Let me kiss and show you what is love
+              and the happiness it brings.
+              You'll sail again like a butterfly
+              endowed with pretty wings.</p>
+
+            <p>Let me do all these to let you see
+              our fates are intertwined.
+              You're the accidental precious gem
+              I've waited long to find.</p>
+
+            <p>The earth and sky conspired to make us meet.
+              They knew we both belong
+              to each other like words and lovely notes
+              give life to every song.</p>
+
+            <p>So fly with me, my beautiful one.
+              It's time we leave the past.
+              I'm yours to keep, and you are mine.
+              We're finally home at last.</p>
+
           </div>
 
-          <div class="width-12-12-m width-12-12 work-item">
-            <a class="inner" href="portfolio-single.html" title="WQWQWQ">
-              <div class="work-inside">
-                <h2>WQWQWQ</h2>
-                <p>wo shi ni die</p>
-              </div>
-              <img title="wq" src="image/wq-big.jpg" />
-            </a>
-          </div>
-
-        <div>
+        </div>
 
       </div>
 
