--- a/blog.html
+++ b/blog.html
@@ -38,8 +38,8 @@
       <div id="nav" class="width-12-12-m width-7-12">
         <ul>
           <li><a href="about.html">About</a></li>
-          <li><a class="active" href="portfolio.html">Portfolio</a></li>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a class="active" href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
        </ul> 
       </div>
@@ -48,30 +48,34 @@
 
     <div id="main" class="grid">
 
-      <div id="portfolio" class="width-12-12-m width-12-12">
+      <div id="writings" class="width-12-12-m width-12-12">
 
-        <h3><a href="portfolio.html">Portfolio</a></h3>
+        <h3><a title="Blog" href="Blog.html">Writing</a></h3>
 
-        <div id="portfolio-holder" class="grid">
+        <div id="writings-holder" class="grid">
 
-          <div class="width-12-12-m width-12-12 work-item">
-            <a class="inner" href="portfolio-single.html" title="WXWX">
-              <div class="work-inside">
-                <h2>WXWX</h2>
-                <p>WQ shi wo die</p>
-              </div>
-              <img title="wx" src="image/wx-big.jpg" />
-            </a>
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
+            <h2><a href="blog-single.html">Fusce Varius Risus</a></h2>
+            <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius risus ut efficitur ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
           </div>
 
-          <div class="width-12-12-m width-12-12 work-item">
-            <a class="inner" href="portfolio-single.html" title="WQWQWQ">
-              <div class="work-inside">
-                <h2>WQWQWQ</h2>
-                <p>wo shi ni die</p>
-              </div>
-              <img title="wq" src="image/wq-big.jpg" />
-            </a>
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
+            <h2><a href="blog-single.html">Cras Hendrerit Eleifend</a></h2>
+            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.<p>
+          </div>
+
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
+            <h2><a href="blog-single.html">Cras Hendrerit Eleifend</a></h2>
+            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.<p>
+          </div>
+
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
+            <h2><a href="blog-single.html">Fusce Varius Risus</a></h2>
+            <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius <a href="">risus ut efficitur</a> ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
           </div>
 
         <div>
